Adding Changes for adding Cities
